force-app/main/default/objects/Timesheet__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CodM Internal</fullName>
            </value>
            <value>
                <fullName>Learning</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Website CodM</fullName>
            </value>
            <value>
                <fullName>Coventry University VK</fullName>
            </value>
            <value>
                <fullName>Infosys MK-PK</fullName>
            </value>
            <value>
                <fullName>Goeasy MK</fullName>
            </value>
            <value>
                <fullName>Salesforce MK</fullName>
            </value>
            <value>
                <fullName>Inchcape MK</fullName>
            </value>
            <value>
                <fullName>Business CodM</fullName>
            </value>
            <value>
                <fullName>HR CodM</fullName>
            </value>
            <value>
                <fullName>TrueCars VK</fullName>
            </value>
            <value>
                <fullName>Amcor VK</fullName>
            </value>
            <value>
                <fullName>ABSA VK</fullName>
                <isActive>false</isActive>
                <label>ABSA VK</label>
            </value>
            <value>
                <fullName>AST MK</fullName>
                <isActive>false</isActive>
                <label>AST MK</label>
            </value>
            <value>
                <fullName>AST VB</fullName>
                <isActive>false</isActive>
                <label>AST VB</label>
            </value>
            <value>
                <fullName>AST VK</fullName>
                <isActive>false</isActive>
                <label>AST VK</label>
            </value>
            <value>
                <fullName>CPQ Internal</fullName>
                <isActive>false</isActive>
                <label>CPQ Internal</label>
            </value>
            <value>
                <fullName>Change Machine VK</fullName>
                <isActive>false</isActive>
                <label>Change Machine VK</label>
            </value>
            <value>
                <fullName>Klizo VB</fullName>
                <isActive>false</isActive>
                <label>Klizo VB</label>
            </value>
            <value>
                <fullName>Phase Trust VK</fullName>
                <isActive>false</isActive>
                <label>Phase Trust VK</label>
            </value>
            <value>
                <fullName>Shell MK</fullName>
                <isActive>false</isActive>
                <label>Shell MK</label>
            </value>
            <value>
                <fullName>Website T14N</fullName>
                <isActive>false</isActive>
                <label>Website T14N</label>
            </value>
            <value>
                <fullName>Worky VK</fullName>
                <isActive>false</isActive>
                <label>Worky VK</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>