force-app/main/default/objects/Timesheet__c/fields/Total_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Time__c</fullName>
    <formula>IF(
 End_Time__c  -  Start_Time__c  &gt; 0 ,
TEXT( FLOOR( MOD( ( End_Time__c -  Start_Time__c  ) * 24, 24 ) ) ) &amp; &quot; Hours &quot;
&amp; TEXT( ROUND( MOD( ( End_Time__c  -  Start_Time__c  ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; Minutes&quot;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Time</label>
    <type>Text</type>
</CustomField>