force-app/main/default/objects/Timesheet__c/listViews/My_Timesheets.listView-meta.xml
<ListView>
    <fullName>My_Timesheets</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Description__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Timesheets</label>
</ListView>